# imprint

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/include/imprint/: allocator.h  debug.h  default_setup.h  linear_allocator.h  memory.h  memory_pool.h  page_allocator.h  slab_allocator.h  slab_cache.h  tag.h  tagged_allocator.h  tagged_page_allocator.h  utils.h
src/lib/: CMakeLists.txt  debug.c  impring_slab_cache.c  imprint_default_setup.c  imprint_linear_allocator.c  imprint_memory.c  imprint_memory_pool.c  imprint_page_allocator.c  imprint_slab_allocator.c  imprint_slab_cache.c  imprint_tag.c  imprint_tagged_allocator.c  imprint_tagged_page_allocator.c  imprint_utils.c
